# yt-to-md

./: .gitignore  .npmrc  README.md  build-wasm.js  build-wasm.sh  i18n.ts  middleware.ts  oxfmt.json  oxlint.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  test.js
app/: layout.tsx  page.tsx
app/[locale]/: layout.tsx  page.tsx
app/components/: LanguageSelector.tsx  MarkdownPreview.tsx  UrlInput.tsx  WASMLoader.tsx  index.ts
app/hooks/: index.ts  useOcr.ts  usePptxExport.ts  useWhisperTranscription.ts
app/lib/: index.ts  subtitle-processor.ts  utils.ts  (+3 more)
docs/: format-options-test.md  task-breakdown.md  test-results.md  ui-test-flow.md
e2e/: fixtures.ts  helpers.ts  suite-01-basic-functionality.spec.ts  suite-02-i18n.spec.ts  suite-03-markdown-output.spec.ts  suite-04-error-handling.spec.ts  suite-05-ui-ux.spec.ts  suite-06-user-journey.spec.ts  suite-07-format-options.spec.ts  test-notes.md  whisper.spec.ts
i18n/: request.ts
messages/: en.json  index.ts  zh-CN.json
public/: yt_subtitle_wasm_bg.wasm
scripts/: install-oxc.sh
wasm/: Cargo.toml
wasm/app/lib/wasm/: yt_subtitle_wasm.d.ts  yt_subtitle_wasm.js  yt_subtitle_wasm_bg.wasm  yt_subtitle_wasm_bg.wasm.d.ts
wasm/src/: lib.rs  processor.rs
wasm/src/ai/: mod.rs
wasm/src/audio/: mod.rs
wasm/src/database/: mod.rs  rust_sqlite.rs  schema.rs  sqlite.rs
wasm/src/frames/: mod.rs
wasm/src/ocr/: mod.rs
wasm/src/output/: markdown.rs  mod.rs  pptx.rs
wasm/src/parser/: markdown.rs  mod.rs  srt.rs  ttml.rs  vtt.rs
wasm/src/speech/: mod.rs
wasm/src/video/: mod.rs
(+55 files in other folders)
